force-app/main/default/objects/College__c/fields/Average_Fees_Collected__c.field-meta.xml
<CustomField>
    <fullName>Average_Fees_Collected__c</fullName>
    <formula>Total_Fees_Collected__c  /  Total_Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Fees Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>