force-app/main/default/objects/College__c/fields/Data_Structures__c.field-meta.xml
<CustomField>
    <fullName>Data_Structures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Structures</label>
    <type>Checkbox</type>
</CustomField>