force-app/main/default/objects/College__c/fields/Fluid_Mechanics__c.field-meta.xml
<CustomField>
    <fullName>Fluid_Mechanics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fluid Mechanics</label>
    <type>Checkbox</type>
</CustomField>