force-app/main/default/objects/College__c/fields/Mathematics__c.field-meta.xml
<CustomField>
    <fullName>Mathematics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mathematics</label>
    <type>Checkbox</type>
</CustomField>