force-app/main/default/objects/College__c/fields/Maximum_Fees_Collected__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Fees_Collected__c</fullName>
    <label>Maximum Fees Collected</label>
    <summarizedField>Student__c.Fees__c</summarizedField>
    <summaryForeignKey>Student__c.ParentIsCollege__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>