force-app/main/default/objects/College__c/fields/Minimum_Fees_Collected__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Fees_Collected__c</fullName>
    <label>Minimum Fees Collected</label>
    <summarizedField>Student__c.Fees__c</summarizedField>
    <summaryForeignKey>Student__c.ParentIsCollege__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>