force-app/main/default/objects/College__c/fields/OOPS__c.field-meta.xml
<CustomField>
    <fullName>OOPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OOPS</label>
    <type>Checkbox</type>
</CustomField>