force-app/main/default/objects/College__c/fields/Thermodynamics__c.field-meta.xml
<CustomField>
    <fullName>Thermodynamics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thermodynamics</label>
    <type>Checkbox</type>
</CustomField>