force-app/main/default/objects/College__c/fields/Total_Fees_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees_Collected__c</fullName>
    <label>Total Fees Collected</label>
    <summarizedField>Student__c.Fees__c</summarizedField>
    <summaryForeignKey>Student__c.ParentIsCollege__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>