force-app/main/default/objects/College__c/fields/Total_Students__c.field-meta.xml
<CustomField>
    <fullName>Total_Students__c</fullName>
    <label>Total Students</label>
    <summaryForeignKey>Student__c.ParentIsCollege__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>