force-app/main/default/objects/College__c/recordTypes/College_Layout.recordType-meta.xml
<RecordType>
    <fullName>College_Layout</fullName>
    <active>true</active>
    <label>College Layout</label>
</RecordType>