force-app/main/default/objects/College__c/recordTypes/Computer_Science.recordType-meta.xml
<RecordType>
    <fullName>Computer_Science</fullName>
    <active>true</active>
    <label>Computer Science</label>
</RecordType>