force-app/main/default/objects/College__c/recordTypes/Mechanical_Engineering.recordType-meta.xml
<RecordType>
    <fullName>Mechanical_Engineering</fullName>
    <active>true</active>
    <label>Mechanical Engineering</label>
</RecordType>